--- a/src/puyo-core/Cargo.toml
+++ b/src/puyo-core/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitintr = "0.3.0"
+
+[lib]
+name = "puyo_core"
+path = "src/main.rs"
