--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 puyo-core = { path = "./src/puyo-core" }
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
