--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -10,34 +10,26 @@ targets = [
 "x86_64-apple-ios-macabi",
 "x86_64-apple-tvos",
 "x86_64-apple-watchos-sim",
-"x86_64-fortanix-unknown-sgx",
-"x86_64-fuchsia",
 "x86_64-linux-android",
-"x86_64-pc-nto-qnx710",
 "x86_64-pc-solaris",
 "x86_64-pc-windows-gnu",
 "x86_64-pc-windows-gnullvm",
 "x86_64-pc-windows-msvc",
-"x86_64-sun-solaris",
-"x86_64-unikraft-linux-musl",
-"x86_64-unknown-dragonfly",
-"x86_64-unknown-freebsd",
-"x86_64-unknown-fuchsia",
-"x86_64-unknown-haiku",
-"x86_64-unknown-hermit",
-"x86_64-unknown-illumos",
-"x86_64-unknown-l4re-uclibc",
 "x86_64-unknown-linux-gnu",
 "x86_64-unknown-linux-gnux32",
-"x86_64-unknown-linux-musl",
-"x86_64-unknown-linux-ohos",
-"x86_64-unknown-netbsd",
-"x86_64-unknown-none",
-"x86_64-unknown-openbsd",
-"x86_64-unknown-redox",
-"x86_64-unknown-uefi",
-"x86_64-uwp-windows-gnu",
 "x86_64-uwp-windows-msvc",
-"x86_64-wrs-vxworks",
-"x86_64h-apple-darwin"
+"x86_64h-apple-darwin",
+"aarch64-apple-darwin",
+"aarch64-apple-ios",
+"aarch64-apple-ios-macabi",
+"aarch64-apple-ios-sim",
+"aarch64-apple-tvos",
+"aarch64-apple-watchos-sim",
+"aarch64-linux-android",
+"aarch64-pc-windows-gnullvm",
+"aarch64-pc-windows-msvc",
+"aarch64-unknown-linux-gnu",
+"aarch64-uwp-windows-msvc",
+"aarch64_be-unknown-linux-gnu",
+"aarch64_be-unknown-linux-gnu_ilp32",
 ]
